# PortaPad

./: Cargo.toml  README.md  README_v1.0.1.md  cargo.toml  certificate.csr  input_key_num.txt  install.sh  key_input_log.txt  logs.txt  package-lock.json  package.json  portapad  private.key  public.crt  rule.md  server.js  service.js  service.ts  test.js
DenoVar/: certificate.csr  install.sh  service.ts
Installer/: license.md  portaapdinstaller.iss
certqr/: main.rs
html/: index.html  manifest.json
modules/: binding.gyp  x11.cpp
setting/: main.rs
setting_forkey/: main.rs
src/: main.rs  remote.rs
src/modules/: certification.rs  mod.rs  remote.rs
src/modules/remote/: audio.rs  config.rs  input.rs  mod.rs
test/: main.rs  rawinputの奴のコード.rs
test/winapi系の没コード/: main.rs  main3.rs  黙殺コード.rs
