[package]
name = "PortaPad"
version = "0.1.0"
edition = "2024"
description = "ニッチで便利なインプット。"
license = "CC-BY-SA-4.0"

[dependencies]
enigo = "0.1"
futures-util = "0.3.31"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tungstenite = { version = "0.21", features = ["native-tls"] }
url = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
webrtc = "0.13.0"
notify-rust = "4"
rdev = "0.5"
once_cell = "1.21.3"
windows-service = "0.8.0"
log = "0.4"
toml = "0.8"
eframe = "0.31.1"
egui = "0.31.1"
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
winapi = "0.3.9"
chrono = "0.4"
dirs = "6.0.0"
lazy_static = "1.4.0"
crossbeam-channel = "0.5"
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_Security"
]}
hidapi = "2.6.3"


[[bin]]
name = "Portapad"
path = "src/main.rs"

[[bin]]
name = "setting"
path = "setting/main.rs"

[[bin]]
name = "setting_forkey"
path = "setting_forkey/main.rs"

[[bin]]
name = "test"
path = "test/main.rs"

[profile.release]
panic = "abort"
